--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@ li a:hover {
 
 <ul>
 
-  <li><a href="week2.html">Week 2</a></li>
-   <li> <a href="week3.html">Week 3</a></li>
-    <li><a href="week4.html">Week 4</a></li>
-    <li><a href="week5.html">Week 5</a></li>
-    <li><a href="week6.html">Week 6</a></li>
-    <li><a href="week7.html">Week 7</a></li>
-    <li><a href="week8.html">Week 8</a></li>
-    <li><a href="week9.html">Week 9</a></li>
+  <li><a href="week2.html">Week 2 Visiting the company HODEY</a></li>
+   <li> <a href="week3.html">Week 3 Visiting the company Bacher Innovation</a></li>
+    <li><a href="week4.html">Week 4 3D Scanning and 3D printing</a></li>
+    <li><a href="week5.html">Week 5 3D Laser Scanning, Modeling, Processing images and Cutting materials</a></li>
+    <li><a href="week6.html">Week 6 Laser Cutting, Introduction to the Electronics</a></li>
+    <li><a href="week7.html">Week 7 Introduction to electronics, Introduction to Arduino</a></li>
+    <li><a href="week8.html">Week 8  DIY sensors </a></li>
+    <li><a href="week9.html">Week 9 Soft Robotics Inflatable and Casting
+
+</a></li>
     <li><a href="week10.html">Week 10</a></li>
     <li><a href="week11.html">Week 11</a></li>
  
